[package]
name = "tomato"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["svg", "smol", "image", "tiny-skia"] }

[profile.release]
opt-level = "s"   # 优化大小而非速度
lto = true        # 链接时优化
codegen-units = 1 # 减少代码生成单元以提高优化
strip = true      # 移除符号信息
