[package]
name = "tomato"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
iced = { version = "0.13", default-features = false, features = [
    "svg",
    "smol",
    "image",
    "tiny-skia",
] }

[profile.release]
opt-level = 3
lto = true    # 链接时优化
strip = true  # 移除符号信息

[build-dependencies]
winresource = "0.1"
